# Android-RayTracing

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BVH.h  Color.h  Scene.h  Sphere3.h  Vector3.h
app/src/main/java/me/longluo/raytracing/: AppApplication.java  Chapter1_PpmActivity.java  Display.java  LibRayTracer.java  MainActivity.java  RayTracing.java  TouchTracker.java
app/src/main/java/me/longluo/raytracing/base/: BaseRecyclerAdapter.java  Ray.java  RecyclerViewHolder.java  Vec3.java
app/src/main/java/me/longluo/raytracing/chapter1/: Chapter1_PpmActivity.java  RayTracing1.java
app/src/main/java/me/longluo/raytracing/chapter10/: Camera.java  Chapter10_DefocusActivity.java  Dielectic.java  HitRecord.java  Hitable.java  HitableList.java  Lambertian.java  Material.java  Metal.java  Ray.java  RayTracing.java  Sphere.java  Vec3.java  Wrapper.java
app/src/main/jni/: Android.mk  Application.mk  Vector3.h
app/src/main/jni/raytracing/: Android.mk  BAH.h  BVH.h  Color.h  Point3.h  Ray3.h  Scene.h  Sphere3.h  Vector3.h  raytracer.cpp
app/src/main/res/color/: s_app_color_blue_2.xml  s_app_color_blue_3.xml  s_app_color_blue_to_red.xml  s_app_color_gray.xml  s_app_color_gray_dark.xml  s_btn_blue.xml  s_btn_gray.xml  s_topbar_btn_color.xml
app/src/main/res/layout/: activity_chapter1.xml  activity_main.xml  activity_render.xml
app/src/main/res/values/: attr.xml  strings.xml  styles.xml  themes.xml
(+212 files in other folders)
